updated to adminLTE v2.4.0-alpha

--- a/src/main/webapp/WEB-INF/templates/fragments/css.xhtml
+++ b/src/main/webapp/WEB-INF/templates/fragments/css.xhtml
@@ -9,16 +9,16 @@
   <!-- =============================================== -->
 
   <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="/webapp/webjars/adminlte/2.3.11/bootstrap/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/webapp/webjars/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <!-- Ionicons -->
   <link rel="stylesheet" href="/webapp/webjars/ionicons/2.0.0/css/ionicons.min.css"/>
   <!-- Theme style -->
-  <link rel="stylesheet" href="/webapp/webjars/adminlte/2.3.11/dist/css/AdminLTE.min.css"/>
+  <link rel="stylesheet" href="dist/css/AdminLTE.min.css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="/webapp/webjars/adminlte/2.3.11/dist/css/skins/_all-skins.min.css"/>
+  <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css"/>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
