--- a/src/main/webapp/WEB-INF/templates/fragments/js.xhtml
+++ b/src/main/webapp/WEB-INF/templates/fragments/js.xhtml
@@ -11,16 +11,16 @@
   <!-- jQuery 3 -->
 	<!-- <script src="/webapp/resources/AdminLTE-2.4.2/bower_components/jquery/dist/jquery.min.js"></script> -->
 	<!-- Bootstrap 3.3.7 -->
-	<script src="/webapp/webjars/adminlte/2.3.11/bootstrap/js/bootstrap.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<!-- SlimScroll -->
-	<script src="/webapp/webjars/adminlte/2.3.11/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+	<script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
 	<!-- FastClick -->
-	<script src="/webapp/webjars/adminlte/2.3.11/plugins/fastclick/fastclick.js"></script>
+	<script src="plugins/fastclick/fastclick.js"></script>
 	<!-- AdminLTE App -->
 	<!-- <script src="/webapp/resources/AdminLTE-2.4.2/dist/js/adminlte.min.js"></script> -->
-	<script src="/webapp/webjars/adminlte/2.3.11/dist/js/app.js"></script>
+	<script src="dist/js/app.js"></script>
 	<!-- AdminLTE for demo purposes -->
-	<script src="/webapp/webjars/adminlte/2.3.11/dist/js/demo.js"></script>
+	<script src="dist/js/demo.js"></script>
 	<script>
 	  /* $(document).ready(function () {
 	    $('.sidebar-menu').tree()
