--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -7,6 +7,7 @@
     xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+  <base href="/webapp/webjars/github-com-almasaeed2010-AdminLTE/v2.4.0-alpha/"/>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <title>AdminLTE 2 | Blank Page</title>
