--- a/src/main/webapp/WEB-INF/templates/fragments/header.xhtml
+++ b/src/main/webapp/WEB-INF/templates/fragments/header.xhtml
@@ -9,8 +9,8 @@
   <!-- =============================================== -->
 
   <header class="main-header">
-    <!-- Logo -->
-    <a href="/webapp/resources/resources/AdminLTE-2.4.2/index2.html" class="logo">
+  	<!-- Logo -->
+    <a href="#" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
