--- a/src/main/webapp/WEB-INF/templates/fragments/menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/fragments/menu.xhtml
@@ -38,14 +38,14 @@
         <li class="header">MAIN NAVIGATION</li>
         <li class="treeview">
           <a href="#">
-            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+            <i class="fa fa-dashboard"></i> <span>Gerenciar</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/webapp/resources/AdminLTE-2.4.2/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="/webapp/resources/AdminLTE-2.4.2/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+            <li><a href="/webapp/public/usuario.jsf"><i class="fa fa-circle-o"></i> Usuario</a></li>
+            <li><a href="/webapp/public/automovel.jsf"><i class="fa fa-circle-o"></i> Automóveis</a></li>
           </ul>
         </li>
         <li class="treeview">
